<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_onthisday"
            android:icon="@drawable/ic_onthisday_menu"
            android:title="@string/menu_onthisday" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_menu"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_graphs"
            android:icon="@drawable/ic_graphs_menu"
            android:title="@string/menu_graphs" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_bookmarks_menu"
            android:title="@string/menu_bookmarks" />

    </group>

    <item android:title="Tools">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_account_menu"
                android:title="@string/menu_account" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_menu"
                android:title="@string/menu_settings" />

        </menu>
    </item>

</menu>
